@@ -30,6 +30,8 @@ Version 2.1.4
    - Bugfix: Race condition when starting monitoring via FAM
    - Bugfix: Testing returned pointer in Decoding::decode_body()
    - Bugfix: Testing for end of file
+   - Bugfix: Reading not enough header lines (maildir; thanks to Nicolas
+        Evrard for reporting this bug)
 
 
 Version 2.1.3		2005-04-03 23:57
